--- a/tugas46.html
+++ b/tugas46.html
@@ -61,7 +61,7 @@
         document.body.style.backgroundColor = "red";
         a.innerHTML = "Berhasil merubah warna menjadi " + warna + " ya?.";
       } else {
-        a.innerHTML = "WARNA YANG ANDA KETIK TIDAK KAMI SEDIAKAN, TOLONG KETIK WARNA DENGAN BENAR!!";
+        a.innerHTML = "MUKA BAPAK KAO " + warna;
       }
     }
 
